--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,4 +36,77 @@ body {
         box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.4);
         transform: translateY(-2px);
     }
+
+    /*Embla carousel*/
+    .embla {
+        max-width: 48rem;
+        margin: auto;
+        --slide-height: 50rem;
+        --slide-spacing: 1rem;
+        --slide-size: 100%;
+    }
+    .embla__viewport {
+        overflow: hidden;
+    }
+    .embla__container {
+        display: flex;
+        touch-action: pan-y pinch-zoom;
+        margin-left: calc(var(--slide-spacing) * -1);
+    }
+    .embla__slide {
+        transform: translate3d(0, 0, 0);
+        flex: 0 0 var(--slide-size);
+        min-width: 0;
+        padding-left: var(--slide-spacing);
+    }
+
+    .embla__controls {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        justify-content: center;
+        gap: 1.2rem;
+        margin-top: 10px;
+    }
+    .embla__dots {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    .embla__dot {
+        -webkit-tap-highlight-color: rgba(
+            var(--text-high-contrast-rgb-value),
+            0.5
+        );
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: #e9531d;
+        touch-action: manipulation;
+        display: inline-flex;
+        text-decoration: none;
+        cursor: pointer;
+        border: 0;
+        padding: 0;
+        margin: 0;
+        width: 1.4rem;
+        height: 1.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+    }
+    .embla__dot:after {
+        background-color: #ee7e55;
+        width: 1.4rem;
+        height: 1.4rem;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        content: '';
+    }
+    .embla__dot--selected:after {
+        background-color: #e9531d;
+    }
 }
